--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "jupyterlab>=4.3.4",
+    "marimo>=0.10.9",
     "polars>=1.17.1",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
