--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "marimo>=0.10.9",
-    "matplotlib>=3.10.0",
+    "plotly-express>=0.4.1",
     "polars>=1.17.1",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
